# llm-evaluation

./: .gitignore  README.md  docker-compose.yml
node-be/: dockerfile  env.example  package-lock.json  package.json
node-be/src/: index.js  index.ts
node-be/src/controller/: evaluateController.js  evaluateController.ts
node-be/src/router/: router.js  router.ts
node-be/src/validation/: evaluateValidation.js  evaluateValidation.ts
py-be/: dockerfile  env.example  main.py  pyproject.toml
py-be/metrics/: answerRelevance.py  bias.py  contextualRelevancy.py  faithfulness.py  hallucination.py  summarization.py
react-fe/: dockerfile  env.example  package-lock.json  package.json
react-fe/src/: index.tsx
react-fe/src/components/: buttonScreen.tsx  chart.tsx  header.tsx  homePage.tsx  inputScreen.tsx  resultScreen.tsx  screenSplitter.tsx
